# Unofficial-computer-graphics-homework

./: .gitignore  Avatar.cpp  Avatar.h  CMakeLists.txt  CameraWindow.cpp  CameraWindow.h  CrawlerScroll.cpp  CrawlerScroll.h  FileImageSource.cpp  FileImageSource.h  GameControl.cpp  GameControl.h  GameElement.h  ImageProcessor.cpp  ImageProcessor.h  ImageSource.h  Logo.cpp  Logo.h  Mesh.cpp  Mesh.h  Vector.cpp  Vector.h  WebcamImageSource.cpp  WebcamImageSource.h  getline.h  run.bat  shadow.cpp  shadow.h  shadow.sln  shadow.vcxproj  utility2d3d.cpp  utility2d3d.hpp
BSP/: BSP.cpp  BSP.h  BSPHeader.h  BSPStructs.h
opencv/lib/Debug/: opencv_calib3d2410d.exp  opencv_contrib2410d.exp  opencv_core2410d.exp  opencv_features2d2410d.exp  opencv_flann2410d.exp  opencv_gpu2410d.exp  opencv_highgui2410d.exp  opencv_imgproc2410d.exp  opencv_legacy2410d.exp  opencv_ml2410d.exp  opencv_nonfree2410d.exp  opencv_objdetect2410d.exp  opencv_ocl2410d.exp  opencv_photo2410d.exp  opencv_stitching2410d.exp  opencv_superres2410d.exp  opencv_video2410d.exp  opencv_videostab2410d.exp
opencv/lib/Release/: opencv_calib3d2410.exp  opencv_contrib2410.exp  opencv_core2410.exp  opencv_features2d2410.exp  opencv_flann2410.exp  opencv_gpu2410.exp  opencv_highgui2410.exp  opencv_imgproc2410.exp  opencv_legacy2410.exp  opencv_ml2410.exp  opencv_nonfree2410.exp  opencv_objdetect2410.exp  opencv_ocl2410.exp  opencv_photo2410.exp  opencv_stitching2410.exp  opencv_superres2410.exp  opencv_video2410.exp  opencv_videostab2410.exp
